posiGen_FullsendBox/src/objects/EE_Upgrade_Item_Type__c.object
<CustomObject>
    <description>Reference table of upgrade item categories.</description>
    <fields>
        <fullName>EA_kWh_Savings_Field_API_Name__c</fullName>
        <description>API Name of the related kWh savings estimate field for this item type</description>
        <inlineHelpText>API Name of the related kWh savings estimate field for this item type</inlineHelpText>
        <label>EA kWh Savings Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <description>This field will be used by the trigger that populates the EE Upgrade object from the Energy Audit object.</description>
        <label>Field API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_in_Customer_Savings_Detail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to include this item type in the Estimated EE Savings Details chart in the customer community.</description>
        <inlineHelpText>Check to include this item type in the Estimated EE Savings Details chart in the customer community.</inlineHelpText>
        <label>Show in Customer Savings Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <description>UoM for improvements</description>
        <label>Unit of Measure</label>
        <picklist>
            <picklistValues>
                <fullName>EA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>EE Upgrade Item Type</label>
    <nameField>
        <label>EE Upgrade Item Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EE Upgrade Item Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>